--- a/cart.html
+++ b/cart.html
@@ -56,5 +56,9 @@ c
 
     renderCart();
   </script>
+  <a href="upi-checkout.html">
+  <button>Pay via UPI (Upload Screenshot)</button>
+</a>
+
 </body>
 </html>
